--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: widget_view
 description: A Dart package that supports for separation of logic and view in a widget.
-version: 0.1.2
+version: 0.1.2+1
 homepage: https://github.com/polyflection/widget_view
 
 environment:
