--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: widget_view
 description: A Dart package that supports for separation of logic and view in a widget.
-version: 0.1.2+1
+version: 0.2.0-nullsafety.0
 homepage: https://github.com/polyflection/widget_view
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.12.0-29.10.beta <3.0.0'
 
 dependencies:
   flutter:
@@ -13,4 +13,4 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic: ^1.9.0
+  pedantic: ^1.10.0-nullsafety.3
